force-app/main/default/objects/ucinn_ascendv2__ascend_AI_OpenAI_Configuration__mdt/ucinn_ascendv2__ascend_AI_OpenAI_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>ascend AI OpenAI Configuration</label>
    <pluralLabel>ascend AI OpenAI Configurations</pluralLabel>
</CustomObject>