force-app/main/default/objects/ucinn_ascendv2__ascend_AI_OpenAI_Configuration__mdt/fields/ucinn_ascendv2__Assistant_Id__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Assistant_Id__c</fullName>
    <label>Assistant Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>