force-app/main/default/objects/ucinn_ascendv2__ascend_AI_OpenAI_Configuration__mdt/fields/ucinn_ascendv2__Assistant_Version__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Assistant_Version__c</fullName>
    <label>Assistant Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>v1</fullName>
            </value>
            <value>
                <fullName>v2</fullName>
                <default>true</default>
                <label>v2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>