force-app/main/default/objects/ucinn_ascendv2__ascend_AI_OpenAI_Configuration__mdt/fields/ucinn_ascendv2__Configuration_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Configuration_Type__c</fullName>
    <label>Configuration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Assistant</fullName>
                <default>true</default>
                <label>Custom Assistant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>