force-app/main/default/objects/ucinn_ascendv2__ascend_AI_OpenAI_Configuration__mdt/fields/ucinn_ascendv2__Icon_URL__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Icon_URL__c</fullName>
    <label>Icon URL</label>
    <type>Url</type>
</CustomField>