force-app/main/default/objects/ucinn_ascendv2__ascend_AI_OpenAI_Configuration__mdt/fields/ucinn_ascendv2__Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>