force-app/main/default/objects/ucinn_ascendv2__ascend_AI_OpenAI_Configuration__mdt/fields/ucinn_ascendv2__JSON_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__JSON_Configuration__c</fullName>
    <label>JSON Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>