force-app/main/default/objects/ucinn_ascendv2__ascend_AI_OpenAI_Configuration__mdt/fields/ucinn_ascendv2__Model__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>gpt-3.5-turbo</fullName>
                <default>true</default>
                <label>gpt-3.5-turbo</label>
            </value>
            <value>
                <fullName>gpt-3.5-turbo-16k</fullName>
            </value>
            <value>
                <fullName>gpt-4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>