force-app/main/default/objects/ucinn_ascendv2__ascend_AI_OpenAI_Configuration__mdt/fields/ucinn_ascendv2__No_Answer_Response__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__No_Answer_Response__c</fullName>
    <defaultValue>&quot;I don&apos;t know. Please ask another question or provide more details to the question.&quot;</defaultValue>
    <label>No Answer Response</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>