force-app/main/default/objects/ucinn_ascendv2__ascend_AI_OpenAI_Configuration__mdt/fields/ucinn_ascendv2__Overall_Process_Timeout__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Overall_Process_Timeout__c</fullName>
    <defaultValue>30000</defaultValue>
    <inlineHelpText>Timeout limit for an overall resource process run. For Assistant API connected resources, this limits the Assistant API request completion status checking process.</inlineHelpText>
    <label>Overall Process Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>