force-app/main/default/objects/ucinn_ascendv2__ascend_AI_OpenAI_Configuration__mdt/fields/ucinn_ascendv2__Permission_Required__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Permission_Required__c</fullName>
    <inlineHelpText>Input a comma separated list of custom permission API names that this resource is accessible to. If left empty, this resource would be accessible to all users with access to use the ascend Assistant.</inlineHelpText>
    <label>Permission Required</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>