force-app/main/default/objects/ucinn_ascendv2__ascend_AI_OpenAI_Configuration__mdt/fields/ucinn_ascendv2__Post_Prompt__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Post_Prompt__c</fullName>
    <defaultValue>&quot;Answer the following question with the file you have access to. Assume that with each question, the user is asking for as much details as possible.&quot;</defaultValue>
    <label>Post Prompt</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>