force-app/main/default/objects/ucinn_ascendv2__ascend_AI_OpenAI_Configuration__mdt/fields/ucinn_ascendv2__Related_Configuration__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Related_Configuration__c</fullName>
    <label>Related Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>