force-app/main/default/objects/ucinn_ascendv2__ascend_AI_OpenAI_Configuration__mdt/fields/ucinn_ascendv2__Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Resource_Name__c</fullName>
    <label>Resource Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>