force-app/main/default/objects/ucinn_ascendv2__ascend_AI_OpenAI_Configuration__mdt/fields/ucinn_ascendv2__System_Message__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__System_Message__c</fullName>
    <label>System Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>