force-app/main/default/objects/ucinn_ascendv2__ascend_AI_OpenAI_Configuration__mdt/fields/ucinn_ascendv2__Temperature__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Temperature__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Temperature</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>