force-app/main/default/objects/ucinn_ascendv2__ascend_AI_OpenAI_Configuration__mdt/fields/ucinn_ascendv2__Timeout__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Timeout__c</fullName>
    <defaultValue>60000</defaultValue>
    <inlineHelpText>Timeout limit for an OpenAI Http callout Request.</inlineHelpText>
    <label>Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>